# rsPass

./: .gitignore  Cargo.nix  Cargo.toml  Dockerfile  README.md  database.db  docker-compose.yaml  flake.nix
.github/workflows/: docker-publish.yml  flake-build.yml
dependencies/: cargo-vulns  cargo-vulns.csv  cargo.cdx.json  nix-sbom.cdx.json  nix-sbom.csv  nix-sbom.spdx.json  nix-vulns.csv
src/: auth.rs  db.rs  lib.rs  main.rs  models.rs  routes.rs
tests/: test_auth.rs  test_basic.rs  test_checkmail.rs  test_handlers.rs  test_health.rs  test_register.rs  test_token.rs
tests/common/: mod.rs
