[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
env_logger = "0.11"
dotenv = "0.15.0"
log = "0.4"
serde_json = "1.0.132"
utoipa = { version = "5.2.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["actix-web"] }
utoipa-actix-web = "0.1.2"

[profile.dev]
debug = true
opt-level = 0  # Slightly optimize debug builds for better runtime performance
incremental = true
lto = "off"