[package]
name = "backend_rspass"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
env_logger = "0.11"
dotenv = "0.15.0"
log = "0.4"
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
utoipa = { version = "5.2.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["actix-web"] }
utoipa-actix-web = "0.1.2"
rusqlite = { version = "0.32.1", features = ["bundled"] }
validator = { version = "0.19", features = ["derive"] }
actix-web-httpauth = "0.8.2"
jsonwebtoken = "9.3.0"
once_cell = "1.20.2"
tokio = "1.41.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
actix-rt = "2.10.0"
actix-test = "0.1.5"

[profile.dev]
debug = true
opt-level = 0  # Slightly optimize debug builds for better runtime performance
incremental = true
lto = "off"